[package]
name = "label-propagation"
version = "0.1.1"
authors = ["vaaaaanquish <6syun9@gmail.com>"]
license = "MIT"
repository = "https://github.com/vaaaaanquish/label-propagation-rs"
description = "Label Propagation Algorithm by Rust"
readme = "README.md"
exclude = [".gitignore", ".gitmodules", "examples"]

[dependencies]
ndarray = "0.15.3"
ndarray-stats = "0.5.0"
